@@ -1,6 +1,5 @@
 package st.redline.compiler;
 
-import antlr.CharQueue;
 import org.objectweb.asm.ClassWriter;
 import org.objectweb.asm.Label;
 import org.objectweb.asm.MethodVisitor;
